# capital-os

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONSTITUTION.md  Dockerfile  Makefile  README.md  docker-compose.yml  initial_prd.md  project-context.md  pyproject.toml
config/: coa.yaml
docs/: README.md  api-contracts-core.md  architecture-patterns.md  architecture.md  backlog-phase1-delta-0215.md  backlog-phase1-prd-closure.md  component-inventory.md  comprehensive-analysis-core.md  contribution-guide.md  current-state.md  data-model.md  data-models.md  deployment-guide.md  development-guide.md  development-workflow.md  docker-mcp-integration.md  existing-documentation-inventory.md  index.html  index.md  mvp-bootstrap-agent-testing.md  project-overview.md  project-parts-metadata.json  project-scan-report.json  project-structure.md  script.js  source-tree-analysis.md  style.css  technology-stack.md  testing-matrix.md  tool-reference.md  traceability-matrix.md  user-provided-context.md
mcp/: entrypoint.sh  server.py  smoke_test.py
migrations/: 0001_ledger_core.rollback.sql  0001_ledger_core.sql  0002_security_and_append_only.rollback.sql  0002_security_and_append_only.sql  0003_approval_gates.rollback.sql  0003_approval_gates.sql  0004_read_query_indexes.rollback.sql  0004_read_query_indexes.sql  0005_entity_dimension.rollback.sql  0005_entity_dimension.sql  0006_periods_policies.rollback.sql  0006_periods_policies.sql  0007_query_surface_indexes.rollback.sql  0007_query_surface_indexes.sql  0008_api_security_runtime_controls.sql  (+5 more)
(+217 files in other folders)
