[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capital-os"
version = "0.1.0"
description = "Capital OS Phase 1 ledger core foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0",
  "httpx>=0.28.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "performance: performance-oriented tests",
]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:starlette\\.formparsers",
]
